force-app/main/default/objects/Event_Speaker__c/fields/Event__c.field-meta.xml
<CustomField>
    <fullName>Event__c</fullName>
    <description>This is a master detail relationship.</description>
    <inlineHelpText>It is master detail relationship with Event.</inlineHelpText>
    <label>Event</label>
    <referenceTo>Event__c</referenceTo>
    <relationshipLabel>Speakers</relationshipLabel>
    <relationshipName>Event_Speakers</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>