force-app/main/default/objects/Event_Speaker__c/fields/Speaker__c.field-meta.xml
<CustomField>
    <fullName>Speaker__c</fullName>
    <description>This is a master detail relationship.</description>
    <inlineHelpText>It is a master detail relationship with speaker.</inlineHelpText>
    <label>Speaker</label>
    <referenceTo>Speaker__c</referenceTo>
    <relationshipLabel>Events</relationshipLabel>
    <relationshipName>Event_Speakers</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>