force-app/main/default/objects/Event_Speaker__c/validationRules/Check_for_duplicate.validationRule-meta.xml
<ValidationRule>
    <fullName>Check_for_duplicate</fullName>
    <active>true</active>
    <errorConditionFormula>Is_Checked__c</errorConditionFormula>
    <errorMessage>Already booked flow</errorMessage>
</ValidationRule>