force-app/main/default/objects/Event_Speaker__c/validationRules/Speaker_Event_EndDate_Live.validationRule-meta.xml
<ValidationRule>
    <fullName>Speaker_Event_EndDate_Live</fullName>
    <active>true</active>
    <errorConditionFormula>OR( Event__r.End__c &lt; DATETIMEVALUE( TODAY() ),NOT( Event__r.Live__c ) )</errorConditionFormula>
    <errorDisplayField>Speaker__c</errorDisplayField>
    <errorMessage>Speaker can only be associated with the Event whose End Date is in future &amp; Event Live Checkbox is checked</errorMessage>
</ValidationRule>